# eclipse-remote-targets

./: LICENSE  README.adoc
external_binaries/: .gitignore
remote_eclipse/: .gitignore  .project
remote_eclipse/global_launches/: Setup a Remote Project.launch
remote_eclipse/local_common/: .dummycorefile  build.sh  common-functions.sh  debug_echo_gdb.sh  key-setup.sh  remote-action.sh  remote-dev-config.sh  remote-gdb.sh  setup-project.sh
remote_eclipse/local_os/freebsd/: build.bash  remote-action.cmd  remote-gdb.bash
remote_eclipse/local_unix/: bash-config.bash  build.bash  launch.sh  makePlatformPrivateKey.sh  platform2unix  remote-action.cmd  remote-gdb.bash  setup-project.bash  unix2platform
remote_eclipse/local_windows/: bash-config.bash  build.bash  common-win-functions.sh  exec-watcher.sh  launch  makePlatformPrivateKey.sh  platform2unix  remote-action.cmd  remote-gdb.bash  rsync  setup-project.bash  sigwrap.py  sigwrap_setup.py  unix2platform  xterm-win-helper.bash
remote_eclipse/remote_unix/: common-remote-functions.sh  cygwin_vc_gcc_emulator.sh  cygwin_vcc.sh  cygwin_vcpp.sh  deploy-package-generic.sh  do-action-internal.sh  do-action.sh  eclipse-echo-and-do.sh  eclipse-error-filter.sh  exec-generic.sh  get-compiler-specs.sh  get_vc_default_defines.cpp  instantiate-launch-template.sh  prepare-binary-for-remote-gdb.sh
remote_eclipse/rsync_config/: rsync-exclude  rsync-inbound-exclude
remote_eclipse/template/LocalProjectNameH2/ZzModuleName/: CMakeLists.txt  mainsrcfile.cqq  remote_eclipse_build.sh
remote_headers/: .gitignore  .project
(+40 files in other folders)
